src/test/ui/feature-gates/feature-gate-infer_static_outlives_requirements.stderr
error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/feature-gate-infer_static_outlives_requirements.rs:5:10
   |
LL |     bar: Bar<U>
   |          ^^^^^^ ...so that the type `U` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/feature-gate-infer_static_outlives_requirements.rs:7:15
   |
LL | struct Bar<T: 'static> {
   |               ^^^^^^^
help: consider adding an explicit lifetime bound...
   |
LL | struct Foo<U: 'static> {
   |             +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
